--- a/data/sources/gdg-prague.yaml
+++ b/data/sources/gdg-prague.yaml
@@ -181,8 +181,20 @@ series:
         dtstart: 2021-11-22 18:30:00+01:00
         dtend: 2021-11-22 20:30:00+01:00
   - meetupcom:
-      meta_description: 'Mon, Oct 25, 2021, 6:30 PM: • How to join?Online only because of covid https://discord.gg/TnaMJMyTDw• What we''ll dohttps://sites.google.com/site/garagepragueone/homehttp://gdg-garage.github.io/GDG Gar'
-      og_title: GDG Garage Prague One, Mon, Oct 25, 2021, 6:30 PM
+      meta_description: 'Mon, Oct 25, 4:30 PM: • How to join?
+
+        Online only because of covid https://discord.gg/TnaMJMyTDw
+
+
+        • What we''ll do
+
+        https://sites.google.com/site/garagepragueone/home
+
+
+        http://gdg-garage.github.io/
+
+        '
+      og_title: GDG Garage Prague One | Meetup
       image: https://secure.meetupstatic.com/photos/event/7/1/7/2/600_447689042.jpeg
       url: https://www.meetup.com/GDGPrague/events/rsffqsyccnbhc/
       ical:
@@ -206,8 +218,20 @@ series:
         dtstart: 2021-10-25 18:30:00+02:00
         dtend: 2021-10-25 20:30:00+02:00
   - meetupcom:
-      meta_description: 'Mon, Nov 8, 2021, 6:30 PM: • How to join?Online only because of covid https://discord.gg/TnaMJMyTDw• What we''ll dohttps://sites.google.com/site/garagepragueone/homehttp://gdg-garage.github.io/GDG Gara'
-      og_title: GDG Garage Prague One, Mon, Nov 8, 2021, 6:30 PM
+      meta_description: 'Mon, Nov 8, 5:30 PM: • How to join?
+
+        Online only because of covid https://discord.gg/TnaMJMyTDw
+
+
+        • What we''ll do
+
+        https://sites.google.com/site/garagepragueone/home
+
+
+        http://gdg-garage.github.io/
+
+        '
+      og_title: GDG Garage Prague One | Meetup
       image: https://secure.meetupstatic.com/photos/event/7/1/7/2/600_447689042.jpeg
       url: https://www.meetup.com/GDGPrague/events/rsffqsyccpblb/
       ical:
@@ -231,8 +255,20 @@ series:
         dtstart: 2021-11-08 18:30:00+01:00
         dtend: 2021-11-08 20:30:00+01:00
   - meetupcom:
-      meta_description: 'Mon, Nov 22, 2021, 6:30 PM: • How to join?Online only because of covid https://discord.gg/TnaMJMyTDw• What we''ll dohttps://sites.google.com/site/garagepragueone/homehttp://gdg-garage.github.io/GDG Gar'
-      og_title: GDG Garage Prague One, Mon, Nov 22, 2021, 6:30 PM
+      meta_description: 'Mon, Nov 22, 5:30 PM: • How to join?
+
+        Online only because of covid https://discord.gg/TnaMJMyTDw
+
+
+        • What we''ll do
+
+        https://sites.google.com/site/garagepragueone/home
+
+
+        http://gdg-garage.github.io/
+
+        '
+      og_title: GDG Garage Prague One | Meetup
       image: https://secure.meetupstatic.com/photos/event/7/1/7/2/600_447689042.jpeg
       url: https://www.meetup.com/GDGPrague/events/rsffqsyccpbdc/
       ical:
@@ -256,8 +292,20 @@ series:
         dtstart: 2021-11-22 18:30:00+01:00
         dtend: 2021-11-22 20:30:00+01:00
   - meetupcom:
-      meta_description: 'Mon, Dec 6, 2021, 6:30 PM: • How to join?Online only because of covid https://discord.gg/TnaMJMyTDw• What we''ll dohttps://sites.google.com/site/garagepragueone/homehttp://gdg-garage.github.io/GDG Gara'
-      og_title: GDG Garage Prague One, Mon, Dec 6, 2021, 6:30 PM
+      meta_description: 'Mon, Dec 6, 5:30 PM: • How to join?
+
+        Online only because of covid https://discord.gg/TnaMJMyTDw
+
+
+        • What we''ll do
+
+        https://sites.google.com/site/garagepragueone/home
+
+
+        http://gdg-garage.github.io/
+
+        '
+      og_title: GDG Garage Prague One | Meetup
       image: https://secure.meetupstatic.com/photos/event/7/1/7/2/600_447689042.jpeg
       url: https://www.meetup.com/GDGPrague/events/rsffqsyccqbjb/
       ical:
@@ -306,8 +354,14 @@ series:
         dtend: 2021-12-20 20:30:00+01:00
       image: https://secure.meetupstatic.com/photos/event/7/1/7/2/600_447689042.jpeg
   - meetupcom:
-      meta_description: 'Fri, Nov 26, 2021, 1:00 PM: THIS IS A FREE EVENT - PLEASE FINISH YOUR RSVP IN THE LINK BELOWhttps://gdg.community.dev/events/details/google-gdg-prague-presents-devfestcz-connect-prague/DevFest.cz is o'
-      og_title: 'DevFest.cz Connect: Prague'
+      meta_description: 'Fri, Nov 26, 12:00 PM: THIS IS A FREE EVENT - PLEASE FINISH YOUR RSVP IN THE LINK BELOW
+
+
+        https://gdg.community.dev/events/details/google-gdg-prague-presents-devfestcz-connect-prague/
+
+
+        DevFest.cz '
+      og_title: 'DevFest.cz Connect: Prague | Meetup'
       image: https://secure.meetupstatic.com/photos/event/7/1/7/2/600_447689042.jpeg
       url: https://www.meetup.com/GDGPrague/events/281675919/
       ical:
