--- a/data/sources/prague-ai.yaml
+++ b/data/sources/prague-ai.yaml
@@ -132,8 +132,11 @@ series:
         dtstart: 2021-10-05 12:00:00+02:00
         dtend: 2021-10-05 13:00:00+02:00
   - meetupcom:
-      meta_description: 'Wed, Oct 20, 2021, 11:00 AM: Hi Makers!If you''re interested in AI, Data Science, Machine Learning and more... then you''ve probably heard about Automated Machine Learning. But you might wonder - what i'
-      og_title: The Benefits of Automated Machine Learning
+      meta_description: 'Wed, Oct 20, 9:00 AM: Hi Makers!
+
+
+        If you''re interested in AI, Data Science, Machine Learning and more... then you''ve probably heard about Automated Machine Learning. But you might wonder - what '
+      og_title: The Benefits of Automated Machine Learning | Meetup
       image: https://secure.meetupstatic.com/photos/event/1/1/8/f/600_499444495.jpeg
       url: https://www.meetup.com/Prague-Artificial-Intelligence-Deep-Learning/events/281378423/
       ical:
@@ -157,8 +160,11 @@ series:
         dtstart: 2021-10-20 11:00:00+02:00
         dtend: 2021-10-20 12:00:00+02:00
   - meetupcom:
-      meta_description: 'Tue, Nov 9, 2021, 11:00 AM: Hello Makers,Studies by market-research institutes estimate that the contribution of AI to the economy will be as high as $15.7tr within the next decade (source: PwC – Sizi'
-      og_title: Building Modern AI Apps & Driving AI Adoption with Less Time and Effort
+      meta_description: 'Tue, Nov 9, 10:00 AM: Hello Makers,
+
+
+        Studies by market-research institutes estimate that the contribution of AI to the economy will be as high as $15.7tr within the next decade (source: PwC – Si'
+      og_title: Building Modern AI Apps & Driving AI Adoption with Less Time and Effort | Meetup
       image: https://secure.meetupstatic.com/photos/event/6/6/1/e/600_499766142.jpeg
       url: https://www.meetup.com/Prague-Artificial-Intelligence-Deep-Learning/events/281670252/
       ical:
