--- a/data/sources/pragueaws.yaml
+++ b/data/sources/pragueaws.yaml
@@ -6,8 +6,14 @@ series:
     image: https://secure.meetupstatic.com/photos/event/6/7/a/0/600_485066528.jpeg
   events:
   - meetupcom:
-      meta_description: 'Wed, Oct 20, 2021, 6:00 PM: We would like to invite you for next Prague AWS User Group Community Meetup at MSD IT.There will be two speakers with the following presentations:• Building event-driven ap'
-      og_title: Regular Prague AWS User Group Meetup
+      meta_description: 'Wed, Oct 20, 4:00 PM: We would like to invite you for next Prague AWS User Group Community Meetup at MSD IT.
+
+
+        There will be two speakers with the following presentations:
+
+
+        • Building event-drive'
+      og_title: Regular Prague AWS User Group Meetup | Meetup
       image: https://secure.meetupstatic.com/photos/event/6/e/2/f/600_498808207.jpeg
       url: https://www.meetup.com/Prague-AWS-Meetup/events/280751506/
       ical:
@@ -31,8 +37,11 @@ series:
         dtstart: 2021-10-20 18:00:00+02:00
         dtend: 2021-10-20 20:00:00+02:00
   - meetupcom:
-      meta_description: 'Wed, Jan 13, 2021, 6:00 PM: We would like to invite you for the first online AWS CZSK User Group Meetup organized together with Amazon and AWS User Group Slovakia.Due to the fact that we can not meet '
-      og_title: AWS CZSK User Group Virtual Meetup
+      meta_description: 'Wed, Jan 13, 5:00 PM: We would like to invite you for the first online AWS CZSK User Group Meetup organized together with Amazon and AWS User Group Slovakia.
+
+
+        Due to the fact that we can not mee'
+      og_title: AWS CZSK User Group Virtual Meetup | Meetup
       image: https://secure.meetupstatic.com/photos/event/8/3/2/f/600_488313583.jpeg
       url: https://www.meetup.com/Prague-AWS-Meetup/events/275297097/
       ical:
@@ -56,8 +65,14 @@ series:
         dtstart: 2021-01-13 18:00:00+01:00
         dtend: 2021-01-13 19:00:00+01:00
   - meetupcom:
-      meta_description: 'Wed, Dec 11, 2019, 6:00 PM: We would like to invite you for next Prague AWS User Group Community Meetup at MSD IT.There will be two speakers with the following presentations:• Experience with migratio'
-      og_title: Regular Prague AWS User Group Meetup
+      meta_description: 'Wed, Dec 11, 5:00 PM: We would like to invite you for next Prague AWS User Group Community Meetup at MSD IT.
+
+
+        There will be two speakers with the following presentations:
+
+
+        • Experience with migr'
+      og_title: Regular Prague AWS User Group Meetup | Meetup
       image: https://secure.meetupstatic.com/photos/event/d/8/4/e/600_487135374.jpeg
       url: https://www.meetup.com/Prague-AWS-Meetup/events/266233892/
       ical:
@@ -81,8 +96,14 @@ series:
         dtstart: 2019-12-11 18:00:00+01:00
         dtend: 2019-12-11 20:00:00+01:00
   - meetupcom:
-      meta_description: 'Tue, Sep 17, 2019, 6:00 PM: We would like to invite you for next Prague AWS User Group Community Meetup at MSD IT.There will be two speakers with the following presentations:• How to migrate a large d'
-      og_title: Regular Prague AWS User Group Meetup
+      meta_description: 'Tue, Sep 17, 4:00 PM: We would like to invite you for next Prague AWS User Group Community Meetup at MSD IT.
+
+
+        There will be two speakers with the following presentations:
+
+
+        • How to migrate a lar'
+      og_title: Regular Prague AWS User Group Meetup | Meetup
       image: https://secure.meetupstatic.com/photos/event/8/9/f/c/600_476495324.jpeg
       url: https://www.meetup.com/Prague-AWS-Meetup/events/264129445/
       ical:
