--- a/data/sources/microsoft-events-prague.yaml
+++ b/data/sources/microsoft-events-prague.yaml
@@ -6,8 +6,8 @@ series:
     image: https://secure.meetupstatic.com/s/img/286374644891845767035/logo/meetup-logo-script-1200x630.png
   events:
   - meetupcom:
-      meta_description: 'Wed, Sep 22, 2021, 5:00 PM: Returning to work after Maternity or Paternity leave can be a challenge, and you shouldn''t have to make a choice between getting the most out of your home life, and making '
-      og_title: TechBaby Prague (Virtual Event)
+      meta_description: 'Wed, Sep 22, 3:00 PM: Returning to work after Maternity or Paternity leave can be a challenge, and you shouldn''t have to make a choice between getting the most out of your home life, and making '
+      og_title: TechBaby Prague (Virtual Event) | Meetup
       image: https://secure.meetupstatic.com/photos/event/a/1/4/4/600_498821284.jpeg
       url: https://www.meetup.com/Microsoft-Events-in-Prague/events/280766905/
       ical:
@@ -31,8 +31,11 @@ series:
         dtstart: 2021-09-22 17:00:00+02:00
         dtend: 2021-09-22 18:00:00+02:00
   - meetupcom:
-      meta_description: 'Tue, Dec 3, 2019, 6:30 PM: RSVPing on Meetup.com does not secure you a place. You need to use following link for registration >>> https://aka.ms/O365ChampionConnection (Registration is free.)Hello all'
-      og_title: Office 365 Champions & User Group Connection in Prague
+      meta_description: 'Tue, Dec 3, 5:30 PM: RSVPing on Meetup.com does not secure you a place. You need to use following link for registration >>> https://aka.ms/O365ChampionConnection (Registration is free.)
+
+
+        Hello '
+      og_title: Office 365 Champions & User Group Connection in Prague | Meetup
       image: https://secure.meetupstatic.com/photos/event/8/c/1/2/600_487115858.jpeg
       url: https://www.meetup.com/Microsoft-Events-in-Prague/events/266913890/
       ical:
@@ -56,8 +59,11 @@ series:
         dtstart: 2019-12-03 18:30:00+01:00
         dtend: 2019-12-03 20:00:00+01:00
   - meetupcom:
-      meta_description: 'Thu, Sep 26, 2019, 5:20 PM: Save the date and register for our upcoming startup community event.We are excited to invite you to our second Prague Startup Day organized by Microsoft. You can look forwa'
-      og_title: Prague Startup Day 2019
+      meta_description: 'Thu, Sep 26, 3:20 PM: Save the date and register for our upcoming startup community event.
+
+
+        We are excited to invite you to our second Prague Startup Day organized by Microsoft. You can look for'
+      og_title: Prague Startup Day 2019 | Meetup
       image: https://secure.meetupstatic.com/photos/event/e/2/9/7/600_484438007.jpeg
       url: https://www.meetup.com/Microsoft-Events-in-Prague/events/264424128/
       ical:
@@ -81,8 +87,11 @@ series:
         dtstart: 2019-09-26 17:20:00+02:00
         dtend: 2019-09-26 21:00:00+02:00
   - meetupcom:
-      meta_description: 'Mon, Jun 17, 2019, 4:30 PM: The organizer has made changes in the event for which you registered. The time and agenda was changed, please see the details below.Summer is here and it''s time to slow dow'
-      og_title: Startup BBQ 2019 on rooftop
+      meta_description: 'Mon, Jun 17, 2:30 PM: The organizer has made changes in the event for which you registered. The time and agenda was changed, please see the details below.
+
+
+        Summer is here and it''s time to slow d'
+      og_title: Startup BBQ 2019 on rooftop | Meetup
       image: https://secure.meetupstatic.com/photos/event/9/2/1/7/600_482077399.jpeg
       url: https://www.meetup.com/Microsoft-Events-in-Prague/events/261799526/
       ical:
